--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CACrypt",
+  "name": "cacrypt",
   "version": "0.0.1",
   "description": "A Nodejs package for encrypt / decrypt text",
   "main": "index.js",
